# fintuning-ST-using-SetFit

./: README.md  pyproject.toml
notebooks/: SetFit_fintuning_LaBSE.ipynb  visualize_st_embeddings.ipynb
